--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,13 @@ doc/**/*.pdf
 
 # ignore intermediate data files 
 script/*.csv
- 
+
 # OS generated files #
 ######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
